fix (about-me): ET-109 header alignment

--- a/src/css/components/about-me.css
+++ b/src/css/components/about-me.css
@@ -84,7 +84,7 @@
   }
 
   .title-about-me {
-    text-align: right;
+    padding-left: 312px;
   }
 
   .container-not-title {
